--- a/NuGet.Signed/ServiceStack.Common.Signed/servicestack.common.signed.nuspec
+++ b/NuGet.Signed/ServiceStack.Common.Signed/servicestack.common.signed.nuspec
@@ -3,7 +3,7 @@
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>ServiceStack.Common.Signed</id>
     <title>ServiceStack.Common.Signed</title>
-    <version>4.0.0</version>
+    <version>3.9.60</version>
     <authors>Demis Bellot</authors>
     <owners>Demis Bellot</owners>
     <summary>Opensource .NET and Mono REST Web Services framework</summary>
@@ -17,12 +17,12 @@
     <language>en-US</language>
     <copyright>Copyright 2013 Service Stack</copyright>
     <dependencies>
-      <dependency id="ServiceStack.Interfaces" version="4.0" />
-      <dependency id="ServiceStack.Text.Signed" version="4.0" />
+      <dependency id="ServiceStack.Text.Signed" version="3.9.60" />
     </dependencies>
   </metadata>
   <files>
     <file src="lib\**\*.*" target="lib" />
     <file src="..\..\src\ServiceStack.Common\**\*.cs" target="src\ServiceStack.Common" />
+    <file src="..\..\src\ServiceStack.Interfaces\**\*.cs" target="src\ServiceStack.Interfaces" />
   </files>
 </package>
