--- a/NuGet.Signed/ServiceStack.Signed/servicestack.signed.nuspec
+++ b/NuGet.Signed/ServiceStack.Signed/servicestack.signed.nuspec
@@ -3,7 +3,7 @@
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>ServiceStack.Signed</id>
     <title>ServiceStack.Signed</title>
-    <version>4.0.0</version>
+    <version>3.9.60</version>
     <authors>Demis Bellot</authors>
     <owners>Demis Bellot</owners>
     <summary>Opensource .NET and Mono REST Web Services framework</summary>
@@ -20,8 +20,9 @@
     <language>en-US</language>
     <copyright>Copyright 2013 Service Stack</copyright>
     <dependencies>
-      <dependency id="ServiceStack.Common.Signed" version="4.0" />
-      <dependency id="ServiceStack.Client.Signed" version="4.0" />
+      <dependency id="ServiceStack.Common.Signed" version="3.9.60" />
+      <dependency id="ServiceStack.Redis.Signed" version="3.9.60" />
+      <dependency id="ServiceStack.OrmLite.SqlServer.Signed" version="3.9.60" />
     </dependencies>
   </metadata>
   <files>
